--- a/src/styles/createUser.css
+++ b/src/styles/createUser.css
@@ -1,17 +1,11 @@
 .User {
-    
-    padding: 100px 180px;
-    border: 2px solid black;
+  padding: 50px 180px;
+  border: 2px solid black;
+  margin-top: 10%;
 }
 
-.main-container {
-    display: flex;
-    flex-direction: column;
-    gap: 10px; /* Espacio entre los elementos */
-  }
-  
-  button {
-    padding: 8px;
-    font-size: 16px;
-    cursor: pointer;
-  }
+button {
+  padding: 8px;
+  font-size: 16px;
+  cursor: pointer;
+}
